Update user-command.yml for Azure Pipelines

--- a/user-command.yml
+++ b/user-command.yml
@@ -7,7 +7,7 @@ parameters:
 
 # ---------------------------------------------------------------------
 variables:
-   - template: variable-template.yml
+   - template: variables-template.yml
 
 # ---------------------------------------------------------------------
 
