--- a/variables-template.yml
+++ b/variables-template.yml
@@ -1,4 +1,6 @@
 variables:
+- group: Refresh_DB_Variables
+
 # Name of agent-pool 
-- name: pool
-  value: "Users"
+#- name: pool
+#  value: "Users"
