Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,8 @@ trigger: none
 ###################################################################################################################################################
 
 variables:
-- group: Refresh_DB_Variables
+  - template: variables-template.yml
+
 #################################################################################################################################################
 
 stages:
