Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ trigger: none
 ###################################################################################################################################################
 
 variables:
-  - template: variables-template.yml
+  - group: Refresh_DB_Variables
 
 #################################################################################################################################################
 
