--- a/set_up_envs_pipeline.yml
+++ b/set_up_envs_pipeline.yml
@@ -13,7 +13,18 @@ stages:
     pool:
       name: $(pool)
       demands:
-        - agent.name -equals $(agent_A)
+        - agent.name -equals $(agent_a)
+    steps:
+    - task: PowerShell@2
+      inputs:
+        arguments: "$(agent_path) $(startup_scripts_path) $(policy_script_path) $(powershell_path)"
+        filePath: $(script_set_environments)
+  - job: set_VmB
+    timeoutInMinutes: $[variables['jobs_timeout']]
+    pool:
+      name: $(pool)
+      demands:
+        - agent.name -equals $(agent_b)
     steps:
     - task: PowerShell@2
       inputs:
