--- a/user-command.yml
+++ b/user-command.yml
@@ -7,7 +7,8 @@ parameters:
 
 # ---------------------------------------------------------------------
 variables:
-   - template: variables-template.yml
+- name: pool
+  value: "Users"
 
 # ---------------------------------------------------------------------
 
