--- a/user-command.yml
+++ b/user-command.yml
@@ -41,5 +41,5 @@ stages:
     steps:
     - task: PowerShell@2
       inputs:
-        arguments: '${{parameters.video_or_screenshot}} $(blob_url) ${{parameters.ticket_id}} ${{parameters.test_env_url}}'
+        #arguments: '${{parameters.video_or_screenshot}} $(blob_url) ${{parameters.ticket_id}} ${{parameters.test_env_url}}'
         filePath: 'db_env_managment_scripts/prova.ps1'
