Update user-command.yml for Azure Pipelines

--- a/user-command.yml
+++ b/user-command.yml
@@ -21,6 +21,11 @@ parameters:
   default: "www.google.com"
   type: string
 
+- name: blob_url
+  displayName: aaaaa
+  default: "https://apsiaem01ada09a20ec1a713.blob.core.windows.net/retail-cdx-down-68719476736?sp=racwdli&st=2022-10-19T10:51:08Z&se=2023-02-02T19:51:08Z&spr=https&sv=2021-06-08&sr=c&sig=kiGgyozma%2FZWom%2BtWz%2F7ynf8rEoXCn3XP5DjigiS65Q%3D"
+  type: string
+  
 # ---------------------------------------------------------------------
 variables:
 - name: pool
@@ -41,4 +46,5 @@ stages:
     steps:
     - task: PowerShell@2
       inputs:
+        arguments: "${{parameters.test_env_url}} ${{parameters.ticket_id}} ${{parameters.video_or_screenshot}} ${{parameters.blob_url}}"
         filePath: 'db_env_managment_scripts/prova.ps1'
