Update user-command.yml for Azure Pipelines

--- a/user-command.yml
+++ b/user-command.yml
@@ -1,5 +1,7 @@
 trigger: none
 
+
+
 parameters:
 - name: agent_id
   displayName: a
@@ -21,15 +23,10 @@ parameters:
   default: "www.google.com"
   type: string
 
-- name: blob_url
-  displayName: aaaaa
-  default: 'https://apsiaem01ada09a20ec1a713.blob.core.windows.net/retail-cdx-down-68719476736?sp=racwdli&st=2022-10-19T10:51:08Z&se=2023-02-02T19:51:08Z&spr=https&sv=2021-06-08&sr=c&sig=kiGgyozma%2FZWom%2BtWz%2F7ynf8rEoXCn3XP5DjigiS65Q%3D'
-  type: string
-  
+
 # ---------------------------------------------------------------------
 variables:
-- name: pool
-  value: "Users"
+  - group: Setup_environments_variables
 
 # ---------------------------------------------------------------------
 
@@ -40,11 +37,11 @@ stages:
   - job: job_1
     timeoutInMinutes: 300
     pool:
-      name: ${{variables.pool}}
+      name: $(pool)
       demands:
         - agent.name -equals ${{parameters.agent_id}}
     steps:
     - task: PowerShell@2
       inputs:
-        arguments: "${{parameters.test_env_url}} ${{parameters.ticket_id}} ${{parameters.video_or_screenshot}} '${{parameters.blob_url}}'"
+        arguments: "${{parameters.test_env_url}} ${{parameters.ticket_id}} ${{parameters.video_or_screenshot}} '$(blob_url)'"
         filePath: 'db_env_managment_scripts/prova.ps1'
