--- a/user-command.yml
+++ b/user-command.yml
@@ -26,7 +26,7 @@ parameters:
 
 # ---------------------------------------------------------------------
 variables:
-  - group: Setup_environments_variables
+  - group: User_variables
 
 # ---------------------------------------------------------------------
 
