Update user-command.yml for Azure Pipelines

--- a/user-command.yml
+++ b/user-command.yml
@@ -23,6 +23,7 @@ parameters:
   default: "www.google.com"
   type: string
 
+name: ${{parameters.ticket_id}}
 
 # ---------------------------------------------------------------------
 variables:
