--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -6,14 +6,16 @@
 trigger:
 - none
 
+# Define the pool where the pipeline will run
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'windows-latest'
 
+# Define the steps of the pipeline
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: AzurePowerShell@5
+  inputs:
+    azureSubscription: 'Sottoscrizione di Visual Studio Enterprise - MPN(c36034cc-afa8-419f-9f57-7a7221a30b58)'
+    ScriptType: 'FilePath'
+    ScriptPath: 'ansible_db_env_management_scripts/setup.ps1'
+    ScriptArguments: '-VMName deve4f2cbff76-1 -ResourceGroupName apsiaem01'
+    errorActionPreference: 'Stop'
