Update set_up_envs_ansible.yml for Azure Pipelines

--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -17,5 +17,5 @@ steps:
     azureSubscription: 'Sottoscrizione di Visual Studio Enterprise - MPN(c36034cc-afa8-419f-9f57-7a7221a30b58)'
     ScriptType: 'FilePath'
     ScriptPath: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/set_environments.ps1'
-    ScriptArguments: '-ResourceGroupName apsiaem01 '
+    ScriptArguments: '-VMName deve4f2cbff76-1 -ResourceGroupName apsiaem01 -ComputerName "deve4f2cbff76-1"'
     azurePowerShellVersion: LatestVersion
