--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -14,8 +14,9 @@ pool:
 steps:
 - task: AzurePowerShell@5
   inputs:
-    azureSubscription: 'c36034cc-afa8-419f-9f57-7a7221a30b58'
+    azureSubscription: 'Sottoscrizione di Visual Studio Enterprise - MPN(c36034cc-afa8-419f-9f57-7a7221a30b58)'
     ScriptType: 'FilePath'
     ScriptPath: '$(System.DefaultWorkingDirectory)/ansible_db_env_management_scripts/set_environments.ps1'
     ScriptArguments: -vmName "deve4f2cbff76-1" -resourceGroupName "apsiaem01"
     azurePowerShellVersion: LatestVersion
+
