Update set_up_envs_ansible.yml for Azure Pipelines

--- a/set_up_envs_ansible.yml
+++ b/set_up_envs_ansible.yml
@@ -1,7 +1,7 @@
 trigger: none
 
 variables:
-  - group: ansible_setup_prova
+  - group: ansible_Setup_environments_variables
   
 #################################################################################################################################################
 
