--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -1,19 +1,12 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- none
+- master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'windows-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: Ansible@1
+  inputs:
+    ansibleType: 'Playbook'
+    playbook: 'ansible_db_env_management_scripts/playbook1.yml'
+    inventory: 'ansible_db_env_management_scripts/inventory'
