--- a/ansible-db-refresh.yml
+++ b/ansible-db-refresh.yml
@@ -5,6 +5,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      sudo apt-get update
+      sudo apt-get install python3-pip -y
+      pip3 install pywinrm
+  displayName: 'Install winrm module'
 - task: Ansible@0
   inputs:
     ansibleInterface: 'agentMachine'
